﻿**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 1.6 BETA
---------------------
  - Fixed defect  #881 Custom image always picking season 1 for the "BOX set" image for escaped series names.
  - Enhancement   #955 Option to download SERIES banners instead of SEASON
  - Enhancement   #970 Updated threading functionality to increase stability    
  - Enhancement  #1005 Download different banners for different seasons
  - Enhancement  #1010 Enable the use of Set banners for BoxedSets
  - Fixed defect #1043 Multiple bugs with SratimPlugin
  - Fixed defect #1045 Banners not downloaded if Local Poster file exists
  - Enhancement  #1037 Added Norwegian language to filename scanner
  - Fixed defect #1046 With "play full BluRay disks" selected, audio and video details are UNKNOWN
  - Enhancement  #1048 Ignore special movie versions from filename: "Directors Cut", "Extended Cut" etc.
  - Enhancement  #1052 Append date & time to error log filename
  - Enhancement  #1040 New NMT file path for PCH C-200

MovieJukebox 1.5
----------------
  - Enhancement  #154 Better handling for trailers, extras & bonus material for movies and TV series
  - Enhancement  #323 TheMovieDB.org plugin (part 1)
  - Enhancement  #455 Split HD Category into 720 and 1080
  - Enhancement  #506 Setting Video Source in NFO file
  - Enhancement  #530 Move preferences out of the XML files into preferences.xsl
  - Enhancement  #595 Manual Language Settings in nfo
  - Enhancement  #632 Disable OpenSubtitle plugin if Internet scraping is turned off in library.xml
  - Enhancement  #665 Specify technical info for video files
  - Enhancement  #686 Video Image Files created when no image found
  - Enhancement  #711 Download season Banners
  - Enhancement  #733 Local use of episode images..
  - Fixed defect #767 Link to video_ts must be case insensitive