@@ -1,0 +1,5 @@
+Place the MediaInfo executable in this directory
+
+Download the MediaInfo program (Command Line Interface version) from here: http://sourceforge.net/project/showfiles.php?group_id=86862&package_id=90612
+Ensure you get a version that has an EXE file.
+Install MediaInfo into this directory
