@@ -1,0 +1,3 @@
+This folder contains the default parameters for YAMJ and should not be altered.
+
+If you wish to overwrite these settings, use a file called "moviejukebox.properties" in the main YAMJ folder (the one above this one)
