@@ -1,7 +1,24 @@
 ######################################################
-## Movie Jukebox main parameters
-#
+## Movie Jukebox default properties
+##
+## YOU SHOULD NOT CHANGE ANY SETTINGS IN THIS FILE
+## 
+## IF YOU WANT TO OVERRIDE ONE OF THESE SETTINGS
+## EDIT/CREATE THE "moviejukebox.properties" FILE IN
+## YOUR ROOT YAMJ FOLDER (The one above this folder)
+##
+## The intention is that this file is overridden at
+## each update without affecting your personal
+## settings or configuration
+##
+######################################################
 # Note:
+#     The order of preference of these files is:
+#         moviejukebox-default.properties
+#         skin.properties
+#         moviejukebox.properties
+#         Command line switches
+#
 #     Lines in this file starting with '#' are comments.
 #     Any parameter with a '#' in front of it is disabled,
 #     to enable it, remove the '#' from the start of the line.
@@ -94,16 +111,21 @@ mjb.scanner.posterToken=_large
 mjb.scanner.thumbnailToken=_small
 mjb.scanner.videoimageToken=.videoimage
 
-# Multi-thread processing parameters
-# Only change these values if you know what you are doing. Altering these settings
-# could get you banned from the source websites.
+# Append the run date to the log file to create a unique log file for each run
+mjb.appendDateToLogFile=false
+
+################################################################
+## Multi-thread processing parameters
+# Only change these values if you know what you are doing.
 # The number of scanning threads
 mjb.MaxThreadsScan=1
+
 # This parameter defines the number of processing threads, it defaults to the number of CPU cores
 mjb.MaxThreadsProcess=1
 
-# Append the run date to the log file to create a unique log file for each run
-mjb.appendDateToLogFile=false
+# Altering these settings could get you banned from the source websites.
+# you can enter explicit limit per host; use regexp just like in source code
+mjb.MaxDownloadSlots=.*=2,.*imdb.*=2,.*google.*=10,.*yahoo.*=10,.*moviedb.*=1,.*thetvdb.*=1
 
 ################################################################
 ## Filename scanner
