@@ -47,7 +47,12 @@ public class PropertiesUtil {
             props.load(reader);
 
         } catch (IOException e) {
-            logger.severe("Failed loading file " + streamName + ": Please check your configuration. The properties file should be in the classpath.");
+        	// Output a warning if moviejukebox.properties isn't found. Otherwise it's an error
+        	if (streamName.contains("moviejukebox.properties")) {
+        		logger.severe("Warning (non-fatal): User properties file: moviejukebox.properties, not found.");
+        	} else {
+        		logger.severe("Failed loading file " + streamName + ": Please check your configuration. The properties file should be in the classpath.");
+        	}
             return false;
         }
         return true;
